--- a/mcalc.desktop
+++ b/mcalc.desktop
@@ -3,7 +3,7 @@
 Type=Application
 Name=MCalc
 Comment=Calculator for performing simple mathematical operations in all existing number systems
-Exec=MCalc
+Exec=mcalc
 Icon=mcalc
 Terminal=false
 Categories=Education
